tests/machine/x/kotlin/tail_recursion.error
line 61:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/tail_recursion.kt:61:13: error: a type annotation is required on a value parameter
fun sum_rec(n, acc): Int {
            ^
/workspace/mochi/tests/machine/x/kotlin/tail_recursion.kt:61:16: error: a type annotation is required on a value parameter
fun sum_rec(n, acc): Int {
               ^

 60: 
 61: fun sum_rec(n, acc): Int {
 62:     if (n == 0) {
